--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -2,24 +2,34 @@ body {
     display: grid;
     height: 100vh;
     grid-template: auto 1fr auto / 300px 1fr auto;
+    font-family: acme, Arial, sans-serif;
 }
 
 header {
     background: rgb(5, 188, 249);
     padding: 2rem;
-    grid-column: 1/3;
+    grid-column: 1/4;
+
+    text-align: center;
+	background-color: rgb(0 110 182 / 1);
+	padding: 0.5rem;
+	color: #fff;
 }
 main {
     background: rgb(249, 247, 247) ;
-    grid-column: 2/3;
+    grid-column: 1/4;
 }
-
+.aside-content {
+  background: yellow;
+  grid-column: 3 / 4;
+}
 footer {
   background: lightskyblue;
   padding: 2rem;
   text-align: center;
-  grid-column: 1 / 3;
+  grid-column: 1 / 4;
 }
 .aside-content {
   padding: 1rem;
 }
+
