--- a/week02/styles/media-query-large.css
+++ b/week02/styles/media-query-large.css
@@ -2,8 +2,14 @@
     header {
         background-color: white;
     }
+    h1{
+        text-align: center;
+    }
 
     main {
         grid-template-columns: 1fr 1fr;
+    }
+    footer{
+        text-align: center;
     }
 }
