--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -1,14 +1,34 @@
-@media (min-width: 740px) {
-	header {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
+@media (min-width: 1024px) {
+    #temple-gallery {
+        grid-template-columns: repeat(3, 1fr);
+
+    }
+
+       #menu-toggle {
+        display: none;
+    }
+    
+    .navigation {
+        display: flex;
+        flex-direction: row;
+        width: auto;
+        order: 2;
+    }
+
 	nav ul {
 		justify-content: flex-end;
 		flex-direction: row;
 	}
 	nav a {
-		flex: 1 1 100%;
+		background-color: #2A4B7C;
+;
+        border-bottom: none;
+        padding: 0.75rem 1rem;
+        font-size: 1rem;
 	}
+
+        .navigation a:hover {
+        background-color: #c6d8f2;
+    }
 }
+
