--- a/styles/temples.css
+++ b/styles/temples.css
@@ -109,9 +109,10 @@ nav a:hover {
   width: 100%;
   aspect-ratio: 4 / 3;
   object-fit: cover;
-  border-radius: 8px 8px 0 0;
+  border-radius: 12px;
+ /* border-radius: 8px 8px 0 0;
   border: 2px solid #ffffff;
-  border-bottom: none;
+  border-bottom: none;*/
 }
 
 #temple-gallery figcaption {
